<resources>
    <string name="app_name">MusicFit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="trainings">Entrenamientos</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="training_title">Entrenamiento</string>
    <string name="music_player">Reproductor de Musica</string>
    <string name="username_label">Nombre de Usuario</string>
    <string name="register_label">registrarte</string>
    <string name="password_label">Contraseña</string>
    <string name="go_to_register_view">Si no tienes una cuenta puedes registrarte.</string>
    <string name="login_with" >o inicia sesión con:</string>
    <string name="login_incognite">Incio de Sesión incognito</string>
    <string name="login_facebook">Inicio de Sesión con Facebook</string>
    <string name="login_google">Inicio de Sesión con Google</string>
    <string name="register_title">Registrarse</string>
    <string name="first_name_label">Nombre</string>
    <string name="lastname_label">Apellidos</string>
    <string name="email_value">Correo Electronico</string>
    <string name="username_error_label">No se ingreso nombre de usuario.</string>
    <string name="firstname_error_label">No se ingresaron nombres.</string>
    <string name="lastname_error_label">No se ingresaron apellidos.</string>
    <string name="email_error_label">Correo no valido.</string>
    <string name="password_again_label">Repetir Contraseña</string>
    <string name="password_error_label">No se ingreso contraseña.</string>
    <string name="password_2_error_label">No coinciden las contraseñas.</string>
    <string name="interruption_exception">Ocurrio una interrupción.</string>
    <string name="execution_exception">Ocurrio un problema al ejecutar.</string>
    <string name="json_exception">Ocurrio una excepción al convertir a JSON</string>
    <string name="user_registered">Usuario registrado con exito.</string>
    <string name="auth_invalid">Usuario o contraseña no validos.</string>
    <string name="server_error">Ocurrio un error desconocido.</string>
    <string name="auth_process">Verificando credenciales.</string>
    <string name="auth_sucess">Credendenciales valdiades ¡Bienvenid@!.</string>
    <string name="report_list_filter_label_from">Desde</string>
    <string name="report_list_filter_label_to">Hasta</string>
    <string name="training_report_view_label_duration_sec">Sec</string>
    <string name="training_report_view_label_duration_min">Min</string>
    <string name="training_report_view_label_duration_hour">Hour</string>
    <string name="training_report_view_label_kilometros">KM</string>
    <string name="training_report_view_label_kilocalorias">KCal</string>
    <string name="login">Iniciar sesión</string>
    <string name="register">Registrarse</string>
    <string name="google_conection_failed">Conexión con Google fallo</string>
    <string name="google_singin_failed">Inicio de Sesión con Google Fallo</string>
    <string name="facebook_app_id">414691896568072</string>
    <string name="facebook_login_cancelled">Inicio de sesión con Facebook cancelado</string>
    <string name="facebook_login_error">No se pudo iniciar sesión con Facebook</string>

</resources>