<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_training">

    <fragment
        android:id="@+id/nav_training"
        android:name="com.idnp.musicfit.views.fragments.trainingReportView.TrainingReportFragment"
        android:label="@string/training_title"
        tools:layout="@layout/fragment_training_report" />

    <fragment
        android:id="@+id/nav_training_list"
        android:name="com.idnp.musicfit.views.fragments.trainingReportListView.TrainingReportListFragment"
        android:label="@string/trainings"
        tools:layout="@layout/fragment_training_report_list" />

    <fragment
        android:id="@+id/nav_music_list_player"
        android:name="com.idnp.musicfit.views.fragments.musicPlayerListView.MusicPlayerListFragment"
        android:label="fragment_music_list"
        tools:layout="@layout/fragment_music_list" />

    <fragment
        android:id="@+id/nav_report_training"
        android:name="com.idnp.musicfit.views.fragments.trainingReportView.TrainingReportFragment"
        android:label=""
        tools:layout="@layout/fragment_training_report" />

    <fragment
        android:id="@+id/nav_music_player"
        android:name="com.idnp.musicfit.views.fragments.musicPlayerControllerView.MusicPlayerControllerFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>