<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/first_background"
        tools:context=".views.activities.loginView.LoginActivity">


        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/button_background"
            android:onClick="login"
            android:text="Iniciar Sesion"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutPassword" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="64dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo_blue" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_layout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <ImageView
                android:id="@+id/UsernameIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutUserName"
                app:srcCompat="@drawable/username_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutUserName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:paddingTop="0dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="0dp"
                app:boxStrokeColor="@color/main_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@color/main_color"
                app:hintTextColor="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/UsernameIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconTint="@color/main_color">

                <EditText
                    android:id="@+id/username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:backgroundTintMode="add"
                    android:drawableTint="@android:color/transparent"
                    android:drawableTintMode="add"
                    android:ems="10"
                    android:foregroundTint="@android:color/transparent"
                    android:foregroundTintMode="add"
                    android:hint="@string/username_label"
                    android:inputType="textPersonName"
                    android:paddingTop="12dp"
                    android:paddingBottom="0dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/input_layout_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayoutUsername">

            <ImageView
                android:id="@+id/PasswordIcon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayoutPassword"
                app:srcCompat="@drawable/password_icon" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@null"
                android:paddingTop="0dp"
                app:boxBackgroundMode="filled"
                app:boxCollapsedPaddingTop="0dp"
                app:boxStrokeColor="@color/main_color"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:endIconTint="@color/main_color"
                app:hintTextColor="@color/main_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/PasswordIcon"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconTint="@color/main_color">

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:backgroundTint="@android:color/transparent"
                    android:backgroundTintMode="add"
                    android:drawableTint="@android:color/transparent"
                    android:drawableTintMode="add"
                    android:ems="10"
                    android:foregroundTint="@android:color/transparent"
                    android:foregroundTintMode="add"
                    android:hint="@string/password_label"
                    android:inputType="textPassword"
                    android:paddingTop="12dp"
                    android:paddingBottom="0dp"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/error_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:textAlignment="textStart"
            android:textColor="@color/error_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button4" />

        <TextView
            android:id="@+id/go_to_register_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="40dp"
            android:onClick="startRegisterActivity"
            android:text="@string/go_to_register_view"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_text_view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="40dp"
            android:text="@string/login_with"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/go_to_register_edit_text" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal|fill|fill_horizontal"
                android:layout_marginStart="0dp"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:onClick="authFacebook"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/logo_facebook" />

                <ImageButton
                    android:id="@+id/imageButton2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:background="@null"
                    android:onClick="authGoogle"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/google_logo" />
            </LinearLayout>
        </HorizontalScrollView>

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:onClick="authIncognite"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/incognite_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>